# DAAL-progress

./: main.py  pyproject.toml  test.py  xfoil_CL.py  xfoil_sweep.py
MOOFoil/: _00.bl  pyproject.toml
MOOFoil/src/MOOFoil/: __init__.py  airfoil.py  basis.py  constraints.py  geom_constraints.py  objectives.py  perf_constraints.py  variable.py
MOOFoil/tests/: test_CSTCT.py  test_basis.py
