[project]
name = "daal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dask>=2025.10.0",
    "distributed>=2025.10.0",
    "ezmodel>=0.2.1",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "moofoil",
    "numpy>=2.3.4",
    "pysamoo>=0.1.2",
    "pyxfoil",
    "rich>=14.2.0",
]

[tool.uv.workspace]
members = [
    "pyXFOIL",
    "MOOFoil",
]

[tool.uv.sources]
pyxfoil = { workspace = true }
moofoil = { workspace = true }
